src/main/java/com/example/librarymanagementsystem/error/ResourceNotFoundException.java
package com.example.librarymanagementsystem.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String s) {
        super(s);
    }
}
